[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/buttons/button_normal.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/buttons/button_pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/buttons/button_focus.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/buttons/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/pause_menu/pause_menu.gd" type="Script" id=5]
[ext_resource path="res://ui/fonts/64x.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/world_icons.png" type="Texture" id=7]
[ext_resource path="res://ui/fonts/48x.tres" type="DynamicFont" id=8]
[ext_resource path="res://ui/bg_blur.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/fonts/96x.tres" type="DynamicFont" id=10]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/BGBlur:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect/BGBlur:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 9, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 18, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 27, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 36, 0, 9, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 45, 0, 9, 16 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/pause = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.15625, 0.15625, 0.15625, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGBlur" parent="ColorRect" instance=ExtResource( 9 )]
visible = false

[node name="PauseLabelCenter" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.217
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="PauseLabelCenter"]
margin_left = 506.0
margin_top = 67.0
margin_right = 1094.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 10 )
text = "pause_menu.paused"

[node name="LevelLabelCenter" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.471
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="LevelLabelCenter"]
margin_left = 666.0
margin_right = 666.0
margin_bottom = 423.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldIcons" type="VBoxContainer" parent="LevelLabelCenter/Control"]
anchor_top = 0.323
anchor_bottom = 0.323
margin_left = -54.0
rect_scale = Vector2( 6, 6 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
margin_right = 54.0
margin_bottom = 16.0
texture = SubResource( 3 )

[node name="2" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
visible = false
margin_top = 20.0
margin_right = 9.0
margin_bottom = 36.0
texture = SubResource( 4 )

[node name="3" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
visible = false
margin_top = 30.0
margin_right = 9.0
margin_bottom = 46.0
texture = SubResource( 5 )

[node name="4" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
visible = false
margin_top = 40.0
margin_right = 9.0
margin_bottom = 56.0
texture = SubResource( 6 )

[node name="5" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
visible = false
margin_top = 50.0
margin_right = 9.0
margin_bottom = 66.0
texture = SubResource( 7 )

[node name="6" type="TextureRect" parent="LevelLabelCenter/Control/WorldIcons"]
visible = false
margin_top = 60.0
margin_right = 9.0
margin_bottom = 76.0
texture = SubResource( 8 )

[node name="LevelLabel" type="Label" parent="LevelLabelCenter"]
margin_left = 670.0
margin_top = 196.0
margin_right = 934.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 8 )
text = "World Name - Level"
align = 1

[node name="PauseButtons" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.35
anchor_right = 0.7
anchor_bottom = 0.5
margin_bottom = 80.4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="PauseButtons"]
margin_top = 2.0
margin_right = 640.0
margin_bottom = 62.0
focus_neighbour_left = NodePath("../Return")
focus_neighbour_top = NodePath("../Return")
focus_neighbour_right = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Return")
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "pause_menu.continue"

[node name="Settings" type="Button" parent="PauseButtons"]
margin_top = 77.0
margin_right = 640.0
margin_bottom = 137.0
focus_neighbour_left = NodePath("../Continue")
focus_neighbour_top = NodePath("../Continue")
focus_previous = NodePath("../Continue")
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "pause_menu.settings"

[node name="Return" type="Button" parent="PauseButtons"]
margin_top = 152.0
margin_right = 640.0
margin_bottom = 212.0
focus_neighbour_right = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Continue")
focus_next = NodePath("../Continue")
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "pause_menu.return"
